--- a/morning-boss0419/Base.lproj/Main.storyboard
+++ b/morning-boss0419/Base.lproj/Main.storyboard
@@ -1,24 +1,149 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Lato-Light.ttf">
+            <string>Lato-Light</string>
+        </array>
+        <array key="Lato-Regular.ttf">
+            <string>Lato-Regular</string>
+        </array>
+        <array key="PlayfairDisplay-Bold.ttf">
+            <string>PlayfairDisplay-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="morning_boss0419" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="applePic" translatesAutoresizingMaskIntoConstraints="NO" id="w7y-EY-fB8">
+                                <rect key="frame" x="-96" y="301" width="340" height="210"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="340" id="gL9-ds-SZm"/>
+                                    <constraint firstAttribute="height" constant="210" id="u1Z-4n-953"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ellipseBg" translatesAutoresizingMaskIntoConstraints="NO" id="jTL-wL-7ae">
+                                <rect key="frame" x="245" y="266" width="130" height="280"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="280" id="IOL-6H-kak"/>
+                                    <constraint firstAttribute="width" constant="130" id="UVw-Io-wwP"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowsButtons" translatesAutoresizingMaskIntoConstraints="NO" id="fkl-4C-1C2">
+                                <rect key="frame" x="208" y="366" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="6eR-8a-858"/>
+                                    <constraint firstAttribute="height" constant="80" id="J74-v7-o7L"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="3t4-AK-wdF">
+                                <rect key="frame" x="145" y="60" width="85" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="85" id="Qej-DD-IQU"/>
+                                    <constraint firstAttribute="height" constant="70" id="jpO-dq-BRU"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m05-SV-ynF">
+                                <rect key="frame" x="48" y="543" width="61" height="32"/>
+                                <fontDescription key="fontDescription" name="PlayfairDisplay-Bold" family="Playfair Display" pointSize="24"/>
+                                <color key="textColor" red="0.96428102250000003" green="0.72282677890000002" blue="0.28803840279999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5.00€" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kDJ-m3-YhX">
+                                <rect key="frame" x="127.00000000000001" y="546" width="60.666666666666671" height="29"/>
+                                <fontDescription key="fontDescription" name="Lato-Light" family="Lato" pointSize="24"/>
+                                <color key="textColor" red="0.96428102250000003" green="0.72282677890000002" blue="0.28803840279999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Bt-Qh-1ob">
+                                <rect key="frame" x="48" y="591" width="38" height="19.333333333333371"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NiO-oC-wHo">
+                                <rect key="frame" x="94" y="591" width="38" height="19.333333333333371"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpj-SJ-9JD">
+                                <rect key="frame" x="140" y="591" width="38" height="19.333333333333371"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVr-9S-ER7">
+                                <rect key="frame" x="48" y="626.33333333333337" width="29" height="15"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I4r-TT-RT1">
+                                <rect key="frame" x="0.0" y="712" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="SbH-6I-0GA"/>
+                                    <constraint firstAttribute="height" constant="100" id="n8u-rO-RNh"/>
+                                </constraints>
+                                <state key="normal" image="navBottomLeft"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="m05-SV-ynF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="48" id="7TR-Rt-qhl"/>
+                            <constraint firstItem="jTL-wL-7ae" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="E1Q-ZM-btq"/>
+                            <constraint firstItem="m05-SV-ynF" firstAttribute="top" secondItem="w7y-EY-fB8" secondAttribute="bottom" constant="32" id="GxB-BF-4sL"/>
+                            <constraint firstItem="NiO-oC-wHo" firstAttribute="bottom" secondItem="5Bt-Qh-1ob" secondAttribute="bottom" id="L4w-kg-o6c"/>
+                            <constraint firstAttribute="bottom" secondItem="I4r-TT-RT1" secondAttribute="bottom" id="MV0-iD-1DM"/>
+                            <constraint firstItem="3t4-AK-wdF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="Mbj-gv-U7O"/>
+                            <constraint firstItem="w7y-EY-fB8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="-96" id="OLJ-jx-IDN"/>
+                            <constraint firstItem="IVr-9S-ER7" firstAttribute="top" secondItem="5Bt-Qh-1ob" secondAttribute="bottom" constant="16" id="SvZ-kz-WYJ"/>
+                            <constraint firstItem="kDJ-m3-YhX" firstAttribute="leading" secondItem="m05-SV-ynF" secondAttribute="trailing" constant="18" id="WDX-5b-F2E"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fkl-4C-1C2" secondAttribute="trailing" constant="87" id="Xbg-TZ-JNN"/>
+                            <constraint firstItem="w7y-EY-fB8" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Z7T-qp-S9E"/>
+                            <constraint firstItem="kDJ-m3-YhX" firstAttribute="bottom" secondItem="m05-SV-ynF" secondAttribute="bottom" id="ayO-ps-CoM"/>
+                            <constraint firstItem="jTL-wL-7ae" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="eTJ-GF-Ntg"/>
+                            <constraint firstItem="fkl-4C-1C2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="gZG-uo-Ipf"/>
+                            <constraint firstItem="NiO-oC-wHo" firstAttribute="leading" secondItem="5Bt-Qh-1ob" secondAttribute="trailing" constant="8" id="lwj-4w-erf"/>
+                            <constraint firstItem="gpj-SJ-9JD" firstAttribute="leading" secondItem="NiO-oC-wHo" secondAttribute="trailing" constant="8" id="n06-ya-d2a"/>
+                            <constraint firstItem="5Bt-Qh-1ob" firstAttribute="leading" secondItem="m05-SV-ynF" secondAttribute="leading" id="nTC-MR-2oa"/>
+                            <constraint firstItem="I4r-TT-RT1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="onq-5y-rOw"/>
+                            <constraint firstItem="gpj-SJ-9JD" firstAttribute="bottom" secondItem="5Bt-Qh-1ob" secondAttribute="bottom" id="q67-m7-Ca5"/>
+                            <constraint firstItem="5Bt-Qh-1ob" firstAttribute="top" secondItem="m05-SV-ynF" secondAttribute="bottom" constant="16" id="u8v-cr-afO"/>
+                            <constraint firstItem="3t4-AK-wdF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wPW-Ii-GCO"/>
+                            <constraint firstItem="IVr-9S-ER7" firstAttribute="leading" secondItem="5Bt-Qh-1ob" secondAttribute="leading" id="yIR-xv-9qN"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="container" destination="8bC-Xf-vdC" id="A0d-XM-ti1"/>
+                        <outlet property="selectButton" destination="fkl-4C-1C2" id="YNY-hC-6a4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="53.600000000000001" y="27.339901477832512"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="applePic" width="338" height="205"/>
+        <image name="arrowsButtons" width="78" height="78"/>
+        <image name="ellipseBg" width="101" height="282"/>
+        <image name="logo" width="104" height="89"/>
+        <image name="navBottomLeft" width="101" height="101"/>
+    </resources>
 </document>
