add more screen (informations)

--- a/morning-boss0419/Base.lproj/Main.storyboard
+++ b/morning-boss0419/Base.lproj/Main.storyboard
@@ -454,7 +454,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uju-1c-h9u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="985" y="-352"/>
+            <point key="canvasLocation" x="984.79999999999995" y="-352.46305418719214"/>
         </scene>
     </scenes>
     <resources>
