--- a/morning-boss0419/Base.lproj/Main.storyboard
+++ b/morning-boss0419/Base.lproj/Main.storyboard
@@ -409,6 +409,7 @@
                         <outlet property="adressUser" destination="I6P-5x-cC1" id="Xwd-II-gWi"/>
                         <outlet property="hourTextField" destination="McB-hb-A9z" id="8ri-7t-ZDO"/>
                         <outlet property="nameUser" destination="lBv-Oz-Z4J" id="acE-Ji-eyC"/>
+                        <outlet property="nextOutletBtn" destination="2bb-Nv-1CU" id="C1i-6Y-bRb"/>
                         <outlet property="townUser" destination="ufi-65-fov" id="cTn-fi-L9N"/>
                         <segue destination="F2r-QY-66D" kind="show" identifier="toPaymentChoose" id="22f-1O-lnp"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="toHome" id="IYO-GI-9dK"/>
@@ -804,6 +805,7 @@
                     </view>
                     <connections>
                         <outlet property="expTxtField" destination="xkl-kx-zP9" id="jOz-ox-r2y"/>
+                        <outlet property="nextOutletBtn" destination="I7y-Er-EhO" id="XNH-Pu-VEA"/>
                         <outlet property="numberTxtField" destination="TAe-1f-FzG" id="YLD-Tn-nAI"/>
                         <outlet property="titulaireTxtField" destination="nWp-kv-c8O" id="OaH-Qe-qoT"/>
                         <segue destination="GSj-qB-051" kind="show" identifier="toRecap" id="8Qw-op-ZyW"/>
@@ -1071,6 +1073,7 @@
                                         </state>
                                         <connections>
                                             <action selector="nextBtn:" destination="S4D-Kw-WQo" eventType="touchUpInside" id="tCw-Bh-Mvh"/>
+                                            <action selector="toEnd:" destination="GSj-qB-051" eventType="touchUpInside" id="ZHG-DK-rzz"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -1096,6 +1099,7 @@
                                 </constraints>
                                 <state key="normal" title="Button" image="leftBottomButton"/>
                                 <connections>
+                                    <action selector="toCreditCard:" destination="GSj-qB-051" eventType="touchUpInside" id="yTC-pA-fPn"/>
                                     <action selector="toPaymentChoose:" destination="iDN-yy-RTB" eventType="touchUpInside" id="uI6-FZ-Y5Q"/>
                                 </connections>
                             </button>
@@ -1133,9 +1137,12 @@
                     </view>
                     <connections>
                         <outlet property="addressTxtField" destination="ref-wy-1xb" id="Rwo-SV-ZfA"/>
+                        <outlet property="nextOutletBtn" destination="Xud-sz-H4g" id="mH9-xy-GbM"/>
                         <outlet property="timeTxtField" destination="Sss-hd-TEB" id="dDe-Zv-qB2"/>
+                        <outlet property="toCreditCard" destination="CBg-D1-Gw9" id="OgB-C0-nDa"/>
                         <outlet property="townTxtField" destination="i1H-K4-F3J" id="G0h-io-0mT"/>
                         <segue destination="Icl-9y-QQf" kind="show" identifier="toEnd" id="zTS-fB-4Ju"/>
+                        <segue destination="iDN-yy-RTB" kind="show" id="lMo-B1-CJM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oQR-c2-pBR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1238,7 +1245,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="menuCell" id="0xX-Xt-toV" customClass="MenuCell" customModule="morning_boss0419" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="card_identifier" id="0xX-Xt-toV" customClass="MenuCell" customModule="morning_boss0419" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="-5" width="244" height="390"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -1248,7 +1255,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nvP-Y0-STl" customClass="DesignableView" customModule="morning_boss0419" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="244" height="294"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EUp-L3-gc1">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EUp-L3-gc1">
                                                             <rect key="frame" x="0.0" y="0.0" width="250" height="120"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="250" id="GgC-0B-ZaT"/>
@@ -1362,6 +1369,9 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="JIk-wV-Sf0" id="3Z0-dM-t7l"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1386,6 +1396,7 @@
                         <viewLayoutGuide key="safeArea" id="Ugm-Rg-DoX"/>
                     </view>
                     <connections>
+                        <outlet property="collectionView" destination="Vbk-Mv-HtI" id="9cq-Sq-1dE"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="toHome" id="4Ww-BS-7th"/>
                     </connections>
                 </viewController>
@@ -1413,10 +1424,9 @@
         <image name="user" width="171" height="223"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="z1Y-WK-gtl"/>
-        <segue reference="z43-AH-0F8"/>
-        <segue reference="5I0-Vs-ajs"/>
-        <segue reference="Ezl-ri-QPM"/>
-        <segue reference="IYO-GI-9dK"/>
+        <segue reference="N0h-W6-ufe"/>
+        <segue reference="22f-1O-lnp"/>
+        <segue reference="1zB-WB-w4o"/>
+        <segue reference="4Ww-BS-7th"/>
     </inferredMetricsTieBreakers>
 </document>
